Fixed content being accidentally hidden by the background in empty div.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size:cover;
+    z-index:-100;
 }
 
 /* Universal Site Settings */
